Commit luego de reparar algunos bugs

--- a/client/src/components/styles/Card.module.css
+++ b/client/src/components/styles/Card.module.css
@@ -2,7 +2,7 @@
     width: 180px;
     display: flex;
     flex-direction: column;
-    background-color:#95dada;
+    background-color:bisque;
     border: 1px solid grey;
     border-radius: 5px;
     padding: 25px;
