--- a/client/src/components/styles/NavBar.module.css
+++ b/client/src/components/styles/NavBar.module.css
@@ -2,7 +2,7 @@
     background: linear-gradient(127deg, rgba(97,6,145,0.8939950980392157) 30%,
      rgba(214,45,77,1) 100%);
      width: 100%;
-     height: 8rem;
+     height: 10rem;
      margin-bottom: .25rem;
 
 }
@@ -19,10 +19,15 @@
 }
 .homeTitle {
     margin-top: .5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: .5rem;
     font-size: 3em;
     color: #0ccac4;
     font-family: "Bigelow Rules";
     
+
+}
+.linkTitle {
+ font-size: 1em;
+ color: #4ee807;;
 
 }
