--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -9,7 +9,7 @@
   }
    .btns{
     display: flex;
-    justify-self: space-evenly;
+    justify-self: space-between;
     justify-items:flex-start;
     
    }
@@ -37,7 +37,7 @@
     border-radius: 6px;
     font-family: "Teko", sans-serif;
     letter-spacing: 0.35mm;
-    padding: 1px 4px 1px 4px;
+    padding: 1px 1px 1px 1px;
     margin-bottom: 10px;
     right: 0;
     font-size: 18px;
