--- a/client/src/components/styles/NavBar.module.css
+++ b/client/src/components/styles/NavBar.module.css
@@ -2,32 +2,49 @@
     background: linear-gradient(127deg, rgba(97,6,145,0.8939950980392157) 30%,
      rgba(214,45,77,1) 100%);
      width: 100%;
-     height: 10rem;
+     height: 8rem;
      margin-bottom: .25rem;
 
 }
 .searchBox {
-
-    -webkit-appearance: none;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
     border: none;
     outline:none; 
     padding: 0.5rem;
     width:8rem;
     line-height:2rem;
-    margin-bottom: 1rem;
+   
 
 }
 .homeTitle {
     margin-top: .5rem;
     margin-bottom: .5rem;
-    font-size: 3em;
+    font-size: 2.8em;
     color: #0ccac4;
     font-family: "Bigelow Rules";
     
 
 }
+.linksTitle {
+    float: left;
+    position:relative;
+    margin-top: -20px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+ font-size: 2em;
+ color: #4ee807;;
+
+}
 .linkTitle {
- font-size: 1em;
+    float: right;
+    position:relative;
+    margin-top: -20px;
+    margin-right: 10px;
+    margin-bottom: 12px;
+ font-size: 2em;
  color: #4ee807;;
 
 }
