--- a/client/src/views/viewStyles/Create.module.css
+++ b/client/src/views/viewStyles/Create.module.css
@@ -1,13 +1,10 @@
 .div{
-    background: url('../../assets/spirals.jpg');
-    background-size: cover;
-    background-position: center;
-    background-color: black;
-    background-repeat: no-repeat;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    margin: none;
+   
+  background: linear-gradient(127deg, rgba(97,6,145,0.8939950980392157) 30%,
+  rgba(214,45,77,1) 100%);
+  background-size: cover;
+  height: 100vw;
+  width: 100vw;
   }
   .title {
     text-align: center;
@@ -18,9 +15,9 @@
   }
   
   .form {
-    background: rgba(226, 154, 237, 0.963);
+    background: bisque;
     padding: 45px 0;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 
     0 0 5px rgb(249, 240, 250),
     0 0 10px rgb(247, 210, 250),
@@ -52,7 +49,7 @@
   
   .input {
     background: none;
-    color: #2a0f0f;
+    color: #000000;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
@@ -101,7 +98,7 @@
     font-family: 'Teko', serif;
     letter-spacing: 2px;
     font-size: 0.9em;  
-    border: solid 2px whitesmoke;
+    border: solid 2px blue;
     border-radius: 15px;
   }
   .textareacr::placeholder{
@@ -139,7 +136,7 @@
     display: block;
     width: 40%;
     margin: 10px auto;
-    color: #fff;
+    color: #000;
     height: 40px;
     font-size: 20px;
     font-weight: 500;
@@ -161,7 +158,7 @@
     background: linear-gradient(to right, #dc55e0, #3961e6);
     box-shadow: 
     0 0 5px rgb(255 240 243);
-    color: #fff;
+    color: #000;
     padding: 7px;
     font-size: 16px;
     appearance: button;
@@ -237,7 +234,7 @@
     display: block;
     width: 30%;
     margin: 10px auto;
-    color: #fff;
+    color: #000;
     height: 40px;
     font-size: 16px;
     cursor: pointer;
