--- a/client/src/components/styles/NavBar.module.css
+++ b/client/src/components/styles/NavBar.module.css
@@ -38,6 +38,26 @@
  color: #4ee807;;
 
 }
+.linksTitle2 {
+    float: left;
+    position:relative;
+    margin-top: -20px;
+    margin-left: 1px;
+    margin-bottom: 10px;
+ font-size: 2em;
+ color: #4ee807;;
+
+}
+.linksTitle3 {
+    float: left;
+    position:relative;
+    margin-top: -20px;
+    margin-left: 1px;
+    margin-bottom: 10px;
+ font-size: 2em;
+ color: #4ee807;;
+
+}
 .linkTitle {
     float: right;
     position:relative;
