Commit filtros listos

--- a/client/src/components/styles/NavBar.module.css
+++ b/client/src/components/styles/NavBar.module.css
@@ -68,3 +68,24 @@
  color: #4ee807;;
 
 }
+.linkTitle2 {
+    float: right;
+    position:relative;
+    margin-top: -20px;
+    margin-right: 10px;
+    margin-bottom: 12px;
+ font-size: 2em;
+ color: #4ee807;;
+
+}
+.linkTitle3 {
+    float: right;
+    position:relative;
+    margin-top: -20px;
+    margin-right: 10px;
+    margin-bottom: 12px;
+ font-size: 2em;
+ color: #4ee807;;
+
+}
+
