--- a/client/src/views/viewStyles/Landing.module.css
+++ b/client/src/views/viewStyles/Landing.module.css
@@ -34,6 +34,8 @@
 .pageNavigationButton {
   background-color: #007bff;
   color: #fff;
+  font-size:18px;
+  font-weight: bold;
   border: none;
   border-radius: 8px;
   padding: 5px 20px;
