--- a/client/src/views/viewStyles/Detail.module.css
+++ b/client/src/views/viewStyles/Detail.module.css
@@ -42,3 +42,12 @@
 .descriptionDiv{
     color: black;
 }
+
+.foot {
+    background: linear-gradient(127deg, rgba(97,6,145,0.8939950980392157) 30%,
+     rgba(214,45,77,1) 100%);
+     width: 100%;
+     height: 12rem;
+     margin-bottom: .25rem;
+
+  } 
