--- a/client/src/views/viewStyles/Home.module.css
+++ b/client/src/views/viewStyles/Home.module.css
@@ -20,6 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
   }
   
   .pageNavigation button {
