Ultimo Commit por hoy

--- a/client/src/components/styles/SearchBar.module.css
+++ b/client/src/components/styles/SearchBar.module.css
@@ -6,7 +6,7 @@
     margin-bottom: 10px;
   }
   .stylSelect {
-    background-color: #a5cffb;
+    background-color: #f5f9fd;
     color: #080404;
     border: none;
     border-radius: 8px;
